Changelog
=========

0.9.6 (2011-02-10)
------------------

- Fixed critical issue that allowed an anonymous user to unsubscribe a
  random subscriber from a channel for which the standard unsubscribe
  view is exposed.
  [malthe]

- Fixed unclosed input tag for including the hidden secret.
  [maurits]

0.9.5 (2010-12-26)
------------------

- Updated the patched `queryCatalog` method of the collection class with
  changes from the baseline.
  [hannosch]

0.9.4 (2010-12-03)
------------------

- Fixed release.

0.9.3 (2010-12-03)
------------------

- Added configuration setting for ``keep_sent_messages`` (new in
  ``collective.singing`` 0.7.1).
  [malthe]

- Fixed CSV Download view for not to break on composers that include list,
  boolean and datetime fields.
  [piv]

- Documentation updates.  [saily]

- Added italian translation, thanks to Augusto Sosa.  [saily]

- Update French translation to reflect change of channel to mailing list
  [toutpt]

0.9.2 (2010-11-04)
------------------

- Documentation updates.   [saily]

- Fixed the stub mailer (encoding issue). [malthe]

0.9.1 (2010-11-04)
------------------

- Fixed the stub mailer (how it ever could work is unclear). [malthe]

- Update test to pass on Plone4
  [toutpt] [pbauer]

- Refactoring send/preview form because formtabbing did not work.
  [saily]

- Reverted changeset 119773 since users could not send folderish content
  types any more (RichDocument is a folderish content type).
  [saily]

0.9.0 (2010-08-01)
------------------

- The send form is now split into two subforms, one for send, and one for
  preview. **NOTE!** This introduces incompatible changes if you are having
  custom forms (although the changes necessary are simple).
  [regebro]

- The "Send as newsletter" action is now no longer shown on folders by
  default.
  [regebro]

- A new 'mass delete from csv' feature has been added to the channel
  administration page. [kiorky]

- French translations have been updated [kiorky]
